<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/yanzhengma_buttom"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="17dp"
        android:background="@drawable/The_app_main_color"
        android:textColor="@drawable/text_color_black"
        android:textSize="20sp"
        android:text="@string/get_number"
        android:onClick="getyanzhengma"
       />
    <RelativeLayout
        android:id="@+id/loginlayout"
        android:layout_below="@id/yanzhengma_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        >
      <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        
        android:layout_marginTop="16dp"
        android:ems="5"
        android:inputType="number" 
        android:hint="@string/input_number_edit_hini">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="17dp"
        android:background="@drawable/The_app_main_color"
        android:textColor="@drawable/text_color_black"
        android:textSize="20sp"
         android:text="@string/login"
         android:onClick="Login" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="11"
        android:hint="@string/get_number_edit_hini"
        android:inputType="phone" />

</RelativeLayout>
