<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/My_acount"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#F2F2F2"
        android:descendantFocusability="blocksDescendants" 
        android:onClick="edit_account">

        <TextView
            android:id="@+id/yonghuming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/textView3"
            android:textSize="18sp"
             />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/order_list_right_bg" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/yonghuming"
            android:layout_alignBottom="@id/yonghuming"
            android:layout_toLeftOf="@id/imageView1"
            android:text="@string/modification" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/nickname_text"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/acount_exit_buttom"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/My_acount"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_color_black"
        android:text="@string/exit_login"
        android:textColor="@drawable/The_app_main_color"
        android:textSize="20sp"
        android:onClick="exit" />

</RelativeLayout>