<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/c_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/contacts_title"
            android:textColor="#7d7f87"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/edit_contact"
            android:layout_width="0px"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/text_edit_bg"
            android:gravity="left|center_vertical"
            android:text="啦啦啦"
            android:textColor="#1c1311"
            android:textSize="16dp"
            tools:ignore="SpUsage,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/c_phone_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/c_title"
        android:layout_marginTop="1dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/phone_tile"
            android:textColor="#7d7f87"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/edit_mobile"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="啦啦啦"
            android:layout_marginLeft="8dp"
            android:background="@drawable/text_edit_bg"
            android:textColor="#1c1311"
            android:textSize="16dp"
            tools:ignore="SpUsage,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/c_address_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/c_phone_title"
        android:layout_marginTop="1dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/service_address_title"
            android:textColor="#7d7f87"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/edit_address_detail"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="啦啦啦"
            android:layout_marginLeft="8dp"
            android:background="@drawable/text_edit_bg"
            android:textColor="#1c1311"
            android:textSize="16dp"
            tools:ignore="SpUsage,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/c_address_title"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:text="@string/del_address"
            android:textColor="#FF0000"
            android:textSize="16dp"
            tools:ignore="SpUsage" 
            android:onClick="delete"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:src="#1c1311"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_address_add"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:background="#FFF000"
            android:text="@string/set_default_address"
            android:textColor="#1c1311"
            android:textSize="16dp"
            tools:ignore="SpUsage" 
            android:onClick="setdefault"/>
    </LinearLayout>

</RelativeLayout>
