<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ll_order_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#1c1311"
        android:minHeight="216dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/rl_c"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical" >
            <RelativeLayout 
                android:id="@+id/iv_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:onClick="onClick"
                >

                <LinearLayout
                    android:id="@+id/addre_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_contacts_tile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contacts_title"
                        android:textColor="#FFF000"
                        android:textSize="12dp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:textColor="#FFF000"
                        android:textSize="12dp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:textColor="#FFF000"
                        android:textSize="12dp"
                        tools:ignore="SpUsage" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/edit_button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addre_layout"
                    android:layout_marginTop="20dp" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/edit"
                        tools:ignore="ContentDescription"
                        android:layout_marginRight="20dp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_below="@id/edit_button_layout" >

                    <TextView
                        android:id="@+id/tv_service_address_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service_address_title"
                        android:textColor="#FFF000"
                        android:textSize="12dp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/tv_service_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:textColor="#FFF000"
                        android:textSize="12dp"
                        tools:ignore="SpUsage" />
                </LinearLayout>

            </RelativeLayout>

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                
                android:background="#ffffff" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp" >

                <TextView
                    android:id="@+id/tv_preset_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/preset_time_title"
                    android:textColor="#FFF000"
                    android:textSize="12dp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/et_year"
                    android:layout_width="208dp"
                    android:layout_height="32dp"
                    android:layout_alignBaseline="@id/tv_preset_time_title"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/tv_preset_time_title"
                    android:background="@drawable/whtie_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:hint="@string/y_m_d"
                    android:onClick="onClick"
                    android:textColor="#1c1311"
                    android:textSize="12dp"
                    tools:ignore="SpUsage,Deprecated" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="208dp"
                    android:layout_height="32dp"
                    android:layout_alignLeft="@id/et_year"
                    android:layout_below="@id/et_year"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/whtie_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:hint="@string/current_time"
                    android:onClick="onClick"
                    android:textColor="#1c1311"
                    android:textSize="12dp"
                    tools:ignore="SpUsage,Deprecated" />
            </RelativeLayout>
        </LinearLayout>

     
    </LinearLayout>

    <Button
        android:id="@+id/bt_configCommit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/ll_order_commit"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFF000"
        android:onClick="onClick"
        android:text="@string/btn_config_commit_title"
        android:textColor="#1c1311"
        android:textSize="16dp"
        tools:ignore="SpUsage" />

</RelativeLayout>